// Vitest Snapshot v1

exports[`component tests > <Choose /> tests  > works with <Otherwise /> 1`] = `
<div>
  Hello 
  WORLD
   !
</div>
`;

exports[`component tests > <Choose /> tests  > works with <When /> 1`] = `
<div>
  Hello 
  WORLD
   !
</div>
`;

exports[`component tests > <For /> tests  > works with arrow function 1`] = `
<div>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
</div>
`;

exports[`component tests > <For /> tests  > works with normal function 1`] = `
<div>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
</div>
`;

exports[`component tests > <If /> tests  > works with truthy condition 1`] = `
<div>
  I'm inside a truthy condition
</div>
`;
